fixed close button from not being center aligned.

--- a/src/main/resources/META-INF/resources/ibx/resources/css/dialog.ibx.css
+++ b/src/main/resources/META-INF/resources/ibx/resources/css/dialog.ibx.css
@@ -85,7 +85,6 @@
 {
 	color:inherit;
 	border:none;
-	padding-right:.25em;
 }
 .ibx-title-bar-close-button:hover
 {
